 NEWS/ChangeLog for rJava
--------------------------

0.8-1	(under development)
    o	fixed exception handling on Windows: the access to "call"
	was off for Windows builds causing incorrect "call" entries
	in exceptions which broke when encountered in try().

0.8-0	2009-10-27
    o	new exception handling was introduced:

	Java exceptions are mapped to Exception conditions which can
	be used to catch the exception at R level using e.g tryCatch. 
	
	The class name automatically contains "Exception", "error"
	and "condition", as well as all the names (without package path)
	of the classes in the inheritance tree of the actual class of the 
	Exception. This allows targetted handlers:
	tryCatch(.jnew("foo"), NoClassDefFoundError=function(e) ...)

	In addition JNI code now causes an error instead of a warning,
	however, some errors internal to JNI may not have an associated
	Java exception and thus will fire the usual simpleError
	condition.

	As a consequence of the new error handling exception objects
	are now supplied in e$jobj of the handler and .jgetEx()
	becomes obsolete.

    o	added new high-level API using the "J" function. It replaces
	the previously used .J()/.jrnew() and .jrcall().

	New Java objects are created using new(J("class"), ...) and
	static methods and fields are accessed using J("class")$...
	The corresponding implementation uses reflection in all cases.

	An additional class "jclassName" was created to support static
	calls to accessor methods such as $ and calls to new().
	
    o   [RF] arrays are now split in two classes : "jrectRef" for rectangular
        arrays, similar to R arrays, and jarrayRef for rugged arrays. 
        Indexing of all arrays is supported using the double bracket 
        indexer "[[" and "[[<-"
        
        The single indexer "[" is only currently implemented for 
        rectangular arrays. This is experimental. Replacement ([<-) 
        is not supported yet.
