@@ -6,6 +6,12 @@
 	was off for Windows builds causing incorrect "call" entries
 	in exceptions which broke when encountered in try().
 
+    o	fixed .jcall() which had inadvertently the default for
+	use.true.class argument set to TRUE. That was considered
+	a bug since it breaks the original behavior and is against the
+	idea of .jcall being the low-level interface.
+
+
 0.8-0	2009-10-27
     o	new exception handling was introduced:
 
